--- a/React-course/usepopcorn/src/index.css
+++ b/React-course/usepopcorn/src/index.css
@@ -295,12 +295,15 @@ body {
   background-color: var(--color-primary);
   color: var(--color-text);
   border: none;
-  border-radius: 10rem;
+  border-radius: 5rem;
   font-size: 1.4rem;
-  padding: 1rem;
+  /* padding: 1rem; */
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s;
+  width : 220px;
+  height : 40px;
+  margin-top :10px;
 }
 
 .btn-add:hover {
